--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	name = Spirit
-	email = i8bou3@gmail.com
+	email = spirit@programmer.net
 [init]
 	defaultBranch = main
 [pull]
@@ -8,4 +8,4 @@
 [credential]
 	helper = store
 [github]
-	user = 8bou3
+	user = spirit-x64
